Learning - 2021-09-16 - Add DTO Converter and a simple endpoint to get persons
