# modules/MgkPortlet/MgkPortlet-rest/MgkPortlet-rest-impl/src/main/java/mgkportlet/rest/internal/graphql/mutation/v1_0/Mutation.java
@@ -16,8 +16,8 @@ import javax.servlet.http.HttpServletResponse;
 
 import javax.ws.rs.core.UriInfo;
 
-import mgkportlet.rest.dto.v1_0.Person;
-import mgkportlet.rest.resource.v1_0.PersonResource;
+import mgkportlet.rest.dto.v1_0.MGKPerson;
+import mgkportlet.rest.resource.v1_0.MGKPersonResource;
 
 import org.osgi.service.component.ComponentServiceObjects;
 
@@ -28,32 +28,32 @@ import org.osgi.service.component.ComponentServiceObjects;
 @Generated("")
 public class Mutation {
 
-	public static void setPersonResourceComponentServiceObjects(
-		ComponentServiceObjects<PersonResource>
-			personResourceComponentServiceObjects) {
+	public static void setMGKPersonResourceComponentServiceObjects(
+		ComponentServiceObjects<MGKPersonResource>
+			mgkPersonResourceComponentServiceObjects) {
 
-		_personResourceComponentServiceObjects =
-			personResourceComponentServiceObjects;
+		_mgkPersonResourceComponentServiceObjects =
+			mgkPersonResourceComponentServiceObjects;
 	}
 
 	@GraphQLField(description = "Creates a new person")
-	public Person addPerson(@GraphQLName("person") Person person)
+	public MGKPerson addPerson(@GraphQLName("mgkPerson") MGKPerson mgkPerson)
 		throws Exception {
 
 		return _applyComponentServiceObjects(
-			_personResourceComponentServiceObjects,
+			_mgkPersonResourceComponentServiceObjects,
 			this::_populateResourceContext,
-			personResource -> personResource.addPerson(person));
+			mgkPersonResource -> mgkPersonResource.addPerson(mgkPerson));
 	}
 
 	@GraphQLField(description = "Update person")
-	public Person updatePerson(@GraphQLName("person") Person person)
+	public MGKPerson updatePerson(@GraphQLName("mgkPerson") MGKPerson mgkPerson)
 		throws Exception {
 
 		return _applyComponentServiceObjects(
-			_personResourceComponentServiceObjects,
+			_mgkPersonResourceComponentServiceObjects,
 			this::_populateResourceContext,
-			personResource -> personResource.updatePerson(person));
+			mgkPersonResource -> mgkPersonResource.updatePerson(mgkPerson));
 	}
 
 	private <T, R, E1 extends Throwable, E2 extends Throwable> R
@@ -94,19 +94,19 @@ public class Mutation {
 		}
 	}
 
-	private void _populateResourceContext(PersonResource personResource)
+	private void _populateResourceContext(MGKPersonResource mgkPersonResource)
 		throws Exception {
 
-		personResource.setContextAcceptLanguage(_acceptLanguage);
-		personResource.setContextCompany(_company);
-		personResource.setContextHttpServletRequest(_httpServletRequest);
-		personResource.setContextHttpServletResponse(_httpServletResponse);
-		personResource.setContextUriInfo(_uriInfo);
-		personResource.setContextUser(_user);
+		mgkPersonResource.setContextAcceptLanguage(_acceptLanguage);
+		mgkPersonResource.setContextCompany(_company);
+		mgkPersonResource.setContextHttpServletRequest(_httpServletRequest);
+		mgkPersonResource.setContextHttpServletResponse(_httpServletResponse);
+		mgkPersonResource.setContextUriInfo(_uriInfo);
+		mgkPersonResource.setContextUser(_user);
 	}
 
-	private static ComponentServiceObjects<PersonResource>
-		_personResourceComponentServiceObjects;
+	private static ComponentServiceObjects<MGKPersonResource>
+		_mgkPersonResourceComponentServiceObjects;
 
 	private AcceptLanguage _acceptLanguage;
 	private com.liferay.portal.kernel.model.Company _company;
